--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="72da94">  <td>20/08/28 17:24:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.div()[pri:0, instance:com.qa.tests.DemoTest@51931956]">div</td> 
-  <td>main@1405747618</td>   <td></td> </tr>
-<tr bgcolor="72da94">  <td>20/08/28 17:24:03</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.multi()[pri:0, instance:com.qa.tests.DemoTest@51931956]">multi</td> 
-  <td>main@1405747618</td>   <td></td> </tr>
-<tr bgcolor="72da94">  <td>20/08/28 17:24:03</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.sub()[pri:0, instance:com.qa.tests.DemoTest@51931956]">sub</td> 
-  <td>main@1405747618</td>   <td></td> </tr>
-<tr bgcolor="72da94">  <td>20/08/28 17:24:03</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.sum()[pri:0, instance:com.qa.tests.DemoTest@51931956]">sum</td> 
-  <td>main@1405747618</td>   <td></td> </tr>
+<tr bgcolor="d2d3b1">  <td>20/09/18 09:18:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.div()[pri:0, instance:com.qa.tests.DemoTest@6b19b79]">div</td> 
+  <td>main@889486595</td>   <td></td> </tr>
+<tr bgcolor="d2d3b1">  <td>20/09/18 09:18:46</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.multi()[pri:0, instance:com.qa.tests.DemoTest@6b19b79]">multi</td> 
+  <td>main@889486595</td>   <td></td> </tr>
+<tr bgcolor="d2d3b1">  <td>20/09/18 09:18:46</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.sub()[pri:0, instance:com.qa.tests.DemoTest@6b19b79]">sub</td> 
+  <td>main@889486595</td>   <td></td> </tr>
+<tr bgcolor="d2d3b1">  <td>20/09/18 09:18:46</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.sum()[pri:0, instance:com.qa.tests.DemoTest@6b19b79]">sum</td> 
+  <td>main@889486595</td>   <td></td> </tr>
 </table>
